fixed header on iphone

--- a/s.css
+++ b/s.css
@@ -14,7 +14,6 @@ nav>a,input[type=submit],.button{display:inline-block;padding:.62em 1.62em;color
 nav>a:hover,input[type=submit]:hover,.button:hover{text-shadow:0 0 10px rgba(255,255,255,0.5)}
 header{height:196px;background:url("http://farm9.staticflickr.com/8515/8475313086_439dda77c3_o.jpg") center -16px no-repeat;margin:0;overflow:hidden;margin-bottom:52px;}
 @media screen and (max-width:900px){header{margin-bottom:100px}
-}@media screen and (max-width:500px){header{margin-bottom:149px}
 }header:before{content:"";background:url("http://farm9.staticflickr.com/8372/8475313082_ffa8f1ee3a_o.jpg") center -16px repeat-x;display:block;position:absolute;top:0;left:0;bottom:0;right:0;z-index:-1000}
 header h1{width:220px;height:146px;background:#fff url("img/log.png") center no-repeat;border-top-left-radius:10px;border-bottom-left-radius:10px;-webkit-box-shadow:0 0 5px rgba(0,0,0,0.3);box-shadow:0 0 5px rgba(0,0,0,0.3);position:absolute;top:25px;right:0;border-bottom:solid 1px #ddd;color:transparent;}
 @media (-o-min-device-pixel-ratio: 5/4),(-webkit-min-device-pixel-ratio: 1.25),(min-resolution: 120dpi){header h1{background-image:url("img/log.svg")}
@@ -29,7 +28,7 @@ header h1{width:220px;height:146px;background:#fff url("img/log.png") center no-
 @media screen and (max-width:400px){nav{top:130px}
 }nav a{border-left:solid 1px #5084ba;border-right:solid 1px #30649a;-webkit-box-shadow:-1px 0 0 #30649a,1px 0 0 #5084ba;box-shadow:-1px 0 0 #30649a,1px 0 0 #5084ba;-webkit-transition:all .5s;-moz-transition:all .5s;-o-transition:all .5s;-ms-transition:all .5s;transition:all .5s;}
 @media screen and (max-width:900px){nav a{width:25%;padding:10px 25px}
-}@media screen and (max-width:500px){nav a{width:33.333333333333336%}
+}@media screen and (max-width:500px){nav a{width:33.33%;padding:5px 25px}
 nav a.half{width:50%}
 }nav a:hover{-webkit-box-shadow:-1px 0 0 #30649a,1px 0 0 #5084ba,inset 0 3px 25px -5px rgba(0,0,0,0.5);box-shadow:-1px 0 0 #30649a,1px 0 0 #5084ba,inset 0 3px 25px -5px rgba(0,0,0,0.5);border-color:#30649a;text-decoration:none}
 .index   >nav a:nth-child(1),.neuf    >nav a:nth-child(2),.usage   >nav a:nth-child(3),.location>nav a:nth-child(4),.pieces  >nav a:nth-child(5),.service >nav a:nth-child(6),.contact >nav a:nth-child(7){-webkit-box-shadow:-1px 0 0 #30649a,1px 0 0 #5084ba,inset 0 3px 25px -5px rgba(0,0,0,0.5);box-shadow:-1px 0 0 #30649a,1px 0 0 #5084ba,inset 0 3px 25px -5px rgba(0,0,0,0.5);border-color:#30649a}
